--- a/build.gradle
+++ b/build.gradle
@@ -43,6 +43,15 @@ dependencies {
 	implementation 'org.springframework.integration:spring-integration-stomp'
 	implementation 'org.springframework.integration:spring-integration-websocket'
 	implementation 'org.springframework.session:spring-session-core'
+	implementation group: 'org.springdoc', name: 'springdoc-openapi-starter-webmvc-ui', version: '2.3.0'
+	implementation group: 'com.sun.mail', name: 'javax.mail', version: '1.6.2'
+	implementation group: 'com.google.guava', name: 'guava', version: '32.1.3-jre'
+	implementation group: 'jakarta.validation', name: 'jakarta.validation-api', version: '3.0.2'
+	implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.13.0'
+	implementation group: 'commons-io', name: 'commons-io', version: '2.15.0'
+	implementation group: 'com.google.zxing', name: 'core', version: '3.5.2'
+	implementation group: 'com.google.zxing', name: 'javase', version: '3.5.2'
+	implementation group: 'org.modelmapper', name: 'modelmapper', version: '3.2.0'
 	compileOnly 'org.projectlombok:lombok'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	runtimeOnly 'com.mysql:mysql-connector-j'
