--- a/build.gradle
+++ b/build.gradle
@@ -47,6 +47,9 @@ dependencies {
 	implementation group: 'com.sun.mail', name: 'javax.mail', version: '1.6.2'
 	implementation group: 'com.google.guava', name: 'guava', version: '32.1.3-jre'
 	implementation group: 'jakarta.validation', name: 'jakarta.validation-api', version: '3.0.2'
+	implementation group: 'io.jsonwebtoken', name: 'jjwt-api', version: '0.12.3'
+	runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-impl', version: '0.12.3'
+	runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-jackson', version: '0.12.3'
 	implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.13.0'
 	implementation group: 'commons-io', name: 'commons-io', version: '2.15.0'
 	implementation group: 'com.google.zxing', name: 'core', version: '3.5.2'
