--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,2 +1,27 @@
-{
-    }
+spring:
+  datasource:
+    url: jdbc:mysql://localhost/rbac
+    username: root
+    password:
+
+  jpa:
+    hibernate:
+      ddl-auto: update
+    properties:
+      hibernate:
+        format_sql: ture
+    database-platform: org.hibernate.dialect.MySQLDialect
+    open-in-view: false
+
+  session:
+    jdbc:
+      initialize-schema: always
+
+jwt:
+  secret: '[a-zA-Z0-9._]^+$Guidelines89797987forAlphabeticalArraNumeralsandOtherSymbo$'
+
+server:
+  port: 8008
+
+mfa:
+  enabled: false
